--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -575,7 +575,7 @@ section img {
 }
 
 blockquote {
-  border-left: 1px solid #ffcc00;
+  border-left: 1px solid #610B38;
   margin: 0;
   padding: 0 0 0 20px;
   font-style: italic;
@@ -631,10 +631,10 @@ td {
   text-align: left;
   padding: 5px 10px;
   border-bottom: 1px solid #e5e5e5;
-  border-right: 1px solid #ffcc00;
+  border-right: 1px solid #610B38;
 }
 td:first-child {
-  border-left: 1px solid #ffcc00;
+  border-left: 1px solid #610B38;
 }
 
 hr {
@@ -694,8 +694,8 @@ header p {
   margin-right: -382px;
   position: fixed;
   top: 115px;
-  background: #ffcc00;
-  border: 1px solid #f0b500;
+  background: #610B38;
+  border: 1px solid #610B38;
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -o-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
