--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -659,7 +659,7 @@ header {
   right: 0;
   width: 100%;
   text-align: center;
-  background: url(../images/background.png) #4276b6;
+  background: url(../images/background.png) #F5A9BC;
   -moz-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
   -o-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
@@ -710,12 +710,12 @@ header p {
 }
 #banner .button {
   border: 1px solid #dba500;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #ffce38));
-  background: -webkit-linear-gradient(#ffe788, #ffce38);
-  background: -moz-linear-gradient(#ffe788, #ffce38);
-  background: -o-linear-gradient(#ffe788, #ffce38);
-  background: -ms-linear-gradient(#ffe788, #ffce38);
-  background: linear-gradient(#ffe788, #ffce38);
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #F6CED8));
+  background: -webkit-linear-gradient(#610B38, #F6CED8);
+  background: -moz-linear-gradient(#610B38, #F6CED8);
+  background: -o-linear-gradient(#610B38, #F6CED8);
+  background: -ms-linear-gradient(#610B38, #F6CED8);
+  background: linear-gradient(#610B38, #F6CED8);
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
@@ -726,7 +726,7 @@ header p {
   -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
   -o-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
-  background-color: #FFE788;
+  background-color: #F6CED8;
   margin-left: 5px;
   padding: 10px 12px;
   margin-top: 6px;
@@ -738,13 +738,13 @@ header p {
   text-align: center;
 }
 #banner .button:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #ffe788));
-  background: -webkit-linear-gradient(#ffe788, #ffe788);
-  background: -moz-linear-gradient(#ffe788, #ffe788);
-  background: -o-linear-gradient(#ffe788, #ffe788);
-  background: -ms-linear-gradient(#ffe788, #ffe788);
-  background: linear-gradient(#ffe788, #ffe788);
-  background-color: #ffeca0;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #F6CED8));
+  background: -webkit-linear-gradient(#610B38, #F6CED8);
+  background: -moz-linear-gradient(#610B38, #F6CED8);
+  background: -o-linear-gradient(#610B38, #F6CED8);
+  background: -ms-linear-gradient(#610B38, #F6CED8);
+  background: linear-gradient(#610B38, #F6CED8);
+  background-color: #F6CED8;
 }
 #banner .fork {
   position: fixed;
@@ -754,7 +754,7 @@ header p {
   margin-top: 6px;
   line-height: 14px;
   font-size: 14px;
-  background-color: #FFE788;
+  background-color: #F6CED8;
 }
 #banner .downloads {
   float: right;
@@ -779,7 +779,7 @@ header p {
   display: inline;
 }
 #banner ul li a.button {
-  background-color: #FFE788;
+  background-color: #F6CED8;
 }
 #banner #logo {
   position: absolute;
